--- a/responsice.css
+++ b/responsice.css
@@ -1,7 +1,10 @@
 
 @media (max-width: 1380px) {
 #home{
-    padding-top: 100px;
+    min-height: 800px;
+}
+.home-btns{
+    width: 80%;
 }
 }
 @media (max-width: 1280px) {
@@ -10,8 +13,8 @@
     }
     #home{
         min-height: 700px;
-        padding-top: 0;
-        justify-content: flex-start;
+        width: 90%;
+        justify-content: center;
     }
     /** skills sections styling*/
     /** about styling*/
@@ -33,7 +36,7 @@
         min-height: 600px;
         width: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
 
     }
@@ -76,7 +79,7 @@
     min-height: 550px;
 }
     .home-text {
-        justify-content: space-around;
+        justify-content: center;
         width: 90%;
         height: 400px;
         gap: 80px;
@@ -88,7 +91,7 @@
         height: auto;
         display: flex;
         flex-direction: column;
-        gap: 50px;
+        gap: 0px;
     }
 
     #text-big {
@@ -106,7 +109,7 @@
 
     .home-btns {
         width: 100%;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 
     .home-btns .btn {
@@ -196,7 +199,7 @@
 
     .home-btns {
         width: 100%;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 
     .home-btns .btn {
@@ -205,7 +208,7 @@
         justify-content: space-between;
         height: 50px;
         width: 200px;
-        font-size: 1.5rem;
+        font-size: 1.25rem;
     }
 
     #btn1:hover {
@@ -261,7 +264,6 @@
     }
 
     .home-btns {
-        width: 100%;
         justify-content: space-between;
     }
 
@@ -303,12 +305,10 @@
 
 
 .about-title p{
-    font-size: 2rem;
-    font-weight: bold;
-    color:  var(--txt-light);
+    font-size: 1.5rem;
 }
 .about-title p:hover{
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 .about-container{
     padding: 0;
@@ -317,49 +317,33 @@
     
 }
 .about-ab{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    text-align: justify;
-    padding:0px 15px;
-    min-height: 300px;
-    max-height: 400px;
-    height: auto;
-    background:  var(--dark-blue);
-    border-radius: 0px 30px;
-
+    width: 90%;
 }
 .ab-title{
-    font-family: Tektur;
-    font-size: 2rem;
-    font-weight: bold;
-    color:  var(--light);
+    font-size: 1.5rem;
 }
 .about-ab:hover .ab-title,
 .ab-title:hover{
-    font-size: 2.25rem;
+    font-size: 2rem;
 }
 .ab-name{
-
     position: relative;
 }
 
 .ab-name p:first-child{
-font-size: 1.5rem;
+font-size: 1.25rem;
 font: bold;
 color: var(--txt-light);
 }
 .ab-name p:nth-child(2){
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font: bold;
     color: var(--light);
 }
 
 
 .ab-desc{
-    font-size: 1.25rem;
+    font-size: 1rem;
     font: bold;
     color: var(--txt-light);
 }
