--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
 
 /** nav bar */
 body {
-    background: var(--navyBlue);
+    background: var(--black);
 }
 
 main {
@@ -41,14 +41,23 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    border-right: 15px solid var(--light);
 }
 
 .nav-logo {
-    height: 230px;
+    height: 290px;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+}
+.nav-text{
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: var(--light);
+    font-family: Tektur;
+
 }
 
 .nav-logo .nav-img {
@@ -93,12 +102,11 @@ main {
 
 /** Home styling */
 #home {
-    padding-top: 200px;
-    min-height: 800px;
-    width: 100%;
+    min-height: 900px;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
 }
@@ -117,7 +125,7 @@ main {
     align-items: center;
 }
 .home-desc{
-    color:var(--light)
+    color:var(--txt-light)
 }
 #text-big {
     font-family: Tektur;
@@ -244,13 +252,13 @@ main {
 }
 
 .skills-card {
-    background: var(--black);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 10px;
     transition: all 0.5s ease-in-out;
     border-radius: 30px;
+    border: 1px solid var(--navyBlue);
 
 }
 
@@ -403,8 +411,9 @@ main {
     min-height: 300px;
     max-height: 400px;
     height: auto;
-    background:  var(--dark-blue);
+    background:  var(--black);
     border-radius: 0px 30px;
+    border: 1px solid var(--light);
 
 }
 .ab-title{
@@ -448,7 +457,7 @@ color: var(--txt-light);
 }
 .about-ab:hover{
     transform: scale(1.125);
-    box-shadow: 0px 0px 30px var(--light);
+    box-shadow: 0px 0px 10px var(--light);
 }
 .ab-desc{
     font-size: 1.5rem;
