--- a/responsice.css
+++ b/responsice.css
@@ -6,8 +6,14 @@
 .home-btns{
     width: 80%;
 }
+
+
+
 }
 @media (max-width: 1280px) {
+    main{
+        margin-left: 277px;
+    }
     .nav {
         width: 230px;
     }
@@ -27,6 +33,20 @@
     .about-ab:hover .ab-title,
 .ab-title:hover{
     font-size: 2rem;
+}
+/**************************************************************************/
+/*!projects styling*/
+#projects {
+    min-height: 700px;
+    
+}
+
+.projects-container {
+    width: 100%;
+}
+
+.slider-wrapper {
+    width: 90%;
 }
 }
 @media (max-width: 1200px) {
@@ -70,6 +90,11 @@
 
 
 
+/**************************************************************************/
+/*!projects styling*/
+.slider-wrapper {
+    width: 90%;
+}
 }
 
 @media (max-width:992px) {
@@ -141,6 +166,39 @@
    grid-template-rows: repeat(3, 400px);
     gap: 5%;
 }
+/********************************************/
+/**!Projects styling*/
+#projects {
+    min-height: 700px;
+  
+}
+
+.card-item .project-img {
+    
+    height: 150px;
+    width: 150px;
+}
+
+.card-item h2.project-name {
+    font-size: 1.5rem;
+}
+
+.card-item p.project-msg {
+    font-size: 1rem;
+    margin-bottom: 20px;
+}
+
+.card-item .pr-btn {
+    font-size: 1rem;
+}
+
+
+.slider-wrapper .swiper-pagination-bullet {
+    background: var(--txt-light);
+    height: 10px;
+    width: 10px;
+}
+
 
 }
 
@@ -226,6 +284,15 @@
     #about{
         padding-top: 0;
     }
+    /********************************************/
+/**!Projects styling*/
+#projects{
+    min-height: 600px;
+}
+.slider-wrapper {
+    width: 80%;
+}
+
 }
 
 @media (max-width: 480px) {
@@ -347,5 +414,38 @@ color: var(--txt-light);
     font: bold;
     color: var(--txt-light);
 }
+
+    /********************************************/
+/**!Projects styling*/
+#projects{
+    min-height: 500px;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+    display: none;
+}
+
+
+}
+@media(max-width:540px){
+        /********************************************/
+/**!Projects styling*/
+#projects{
+    min-height: 600px;
+}
+.slider-wrapper {
+    width: 80%;
+}
+
+
+.card-item h2.project-name {
+    font-size: 1.25rem;
+}
+
+.card-item p.project-msg {
+    font-size: 0.75rem;
+}
+
 
 }
