--- a/responsice.css
+++ b/responsice.css
@@ -364,6 +364,24 @@
     #email {
         width: calc(100% - 30px);
     }
+    /**************************************************/
+/**!Footer Styling */
+footer{
+    margin-top: 10px;
+    height: 50px;
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.logo{
+    height: 40px;
+    width: 40px;
+    border-radius: 10px;
+}
+
 }
 
 @media(max-width:540px) {
